<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_500"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/cabin_sketch"
        android:gravity="center"
        android:text="@string/let_s_start"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="64dp"
        android:fontFamily="@font/cabin_sketch"
        android:gravity="center"
        android:hint="@string/what_s_your_name"
        android:paddingBottom="8dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="24sp"
        android:textStyle="bold" />


    <Button
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/purple_200"
        android:text="@string/save"
        android:textColor="@color/white" />

</RelativeLayout>