<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <LinearLayout
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:background="@color/purple_500"
        android:padding="12dp">

        <ImageView
            android:id="@+id/image_all"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_all_inclusive" />


        <ImageView
            android:id="@+id/image_happy"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_happy" />

        <ImageView
            android:id="@+id/image_sunny"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_sunny" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/menu"
        android:padding="32dp">

        <TextView
            android:id="@+id/text_greeting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/cabin_sketch"
            android:text="@string/hello"
            android:textSize="18sp"
            android:textStyle="bold" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:foregroundGravity="center">

            <TextView
                android:id="@+id/text_phrase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cabin_sketch"
                android:gravity="center"
                android:paddingBottom="16dp"
                android:text="@string/motivation_phrase"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <View
                android:layout_width="140dp"
                android:layout_height="3dp"
                android:layout_alignBottom="@id/text_phrase"
                android:layout_centerHorizontal="true"
                android:background="@color/black"
                android:backgroundTint="@color/purple_700"
                android:elevation="5dp" />

        </RelativeLayout>


        <Button
            android:id="@+id/button_new_phrase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/new_phrase" />
    </RelativeLayout>
</RelativeLayout>